
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int va_list ;
typedef int demux_t ;


 int VLC_EGENERIC ;
 int VLC_UNUSED (int) ;

__attribute__((used)) static int Control( demux_t *p_demux, int i_query, va_list args )
{
    VLC_UNUSED( p_demux ); VLC_UNUSED( i_query ); VLC_UNUSED( args );

    return VLC_EGENERIC;
}
