; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_nsc.c_Control.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_nsc.c_Control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_EGENERIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @Control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Control(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = ptrtoint i32* %7 to i32
  %9 = call i32 @VLC_UNUSED(i32 %8)
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @VLC_UNUSED(i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @VLC_UNUSED(i32 %12)
  %14 = load i32, i32* @VLC_EGENERIC, align 4
  ret i32 %14
}

declare dso_local i32 @VLC_UNUSED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
